--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <label for="born">When were you born?</label>
             <input id="born" class="form-control" type="date">
           </div>
+          <div class="form-group">
+            <label for="color">What is your favorite color?</label>
+            <input id="color" class="form-control" type="color">
+          </div>
 
           <button type="submit" class="btn btn-success">Submit</button>
         </form>
@@ -62,7 +66,7 @@
 
         <div id="paragraph">
           <p>
-            Hi my name is <span class="name"></span> and I was born on <span class="dob"></span>. My favorite type of food is <span class="food-type"></span> and my favorite beverage is <span class="beverage-type"></span>. I like to listen to <span class="favorite-artist"></span>.
+            Hi my name is <span class="name"></span> and I was born on <span class="dob"></span>. My favorite type of food is <span class="food-type"></span> and my favorite beverage is <span class="beverage-type"></span>. I like to listen to <span class="favorite-artist"></span>. My favorite color is <span class="color"></span>.
           </p>
         </div>
       </div>
